<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/LavenderBlush"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/asdasa"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/sdad"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/fram"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/urindo" />
            </FrameLayout>

            <EditText
                android:id="@+id/txtuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:ems="10"
                android:hint="@string/id"
                android:singleLine="true"
                android:textColorHint="@color/SkyBlue" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/txtpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textColorHint="@color/SkyBlue" />

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:text="@string/login"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>