<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/clouds" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/mhs"
                style="@drawable/shadow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shadow"
                android:radius="10dip" >

                <LinearLayout
                    android:id="@+id/kk"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/infomhs"
                        android:textColor="@color/urindobiru"
                        android:textSize="14sp"
                        android:textStyle="italic" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="3dp"
                        android:background="@color/urindobiru" >
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/a"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/krsnpm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="@string/npm" />

                        <TextView
                            android:id="@+id/npmmhs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center_vertical"
                            android:layout_marginBottom="5dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="5dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/DimGray" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/FrameLayout01"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/krsnama"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="@string/nama" />

                        <TextView
                            android:id="@+id/namamhs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center_vertical"
                            android:layout_marginBottom="5dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="5dp"
                            android:gravity="right|center_vertical"
                            android:lines="1"
                            android:maxEms="10"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/FrameLayout02"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/detailtotalsks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="@string/smt" />

                        <TextView
                            android:id="@+id/smtmhs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center_vertical"
                            android:layout_marginBottom="5dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="5dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/CadetBlue"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </FrameLayout>
                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/FrameLayout04"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shadow"
                android:radius="10dip" >

                <LinearLayout
                    android:id="@+id/hill"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp" >

                    <TextView
                        android:id="@+id/TextView09"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/infokrs"
                        android:textColor="#c0392b"
                        android:textSize="14sp"
                        android:textStyle="italic" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="3dp"
                        android:background="#c0392b" >
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/FrameLayout07"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView05"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="@string/krsambil" />

                        <TextView
                            android:id="@+id/totkrsmhs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center_vertical"
                            android:layout_marginBottom="5dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="5dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/CadetBlue"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/FrameLayout06"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView07"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="@string/status" />

                        <TextView
                            android:id="@+id/statkrsmhs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center_vertical"
                            android:layout_marginBottom="5dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="5dp"
                            android:gravity="right|center_vertical"
                            android:lines="1"
                            android:maxEms="10"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/FrameLayout03"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >
                    </FrameLayout>
                </LinearLayout>
            </FrameLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
